...
        android:src="@drawable/background2"
        android:scaleType="centerCrop"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/btDislike"
        android:visibility="invisible"
        android:alpha="0"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/cross"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="30dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/btLike"
        android:visibility="invisible"
        android:alpha="0"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/heart"
...
