...
            android:textAlignment="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ich bin hungrig"
            android:id="@+id/btHungry"
            android:layout_gravity="center"
            style="@style/button"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="wrap_content"
...
